Обновил визуал и вывод инфы.

--- a/weather/templates/weather/base.html
+++ b/weather/templates/weather/base.html
@@ -24,11 +24,13 @@
     </header>
 
     <main class="px-3">
+    <div class="card-group d-flex justify-content-center">
         {% block content %}
 
 
 
         {% endblock %}
+    </div>
     </main>
 
     <footer class="mt-auto text-white-50">
