Легкие изменения визуала

--- a/weather/templates/weather/base.html
+++ b/weather/templates/weather/base.html
@@ -14,12 +14,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
         <div>
-            <h3 class="float-md-start mb-0">Погода</h3>
-            <div class="btn-group float-lg-end">
-                <a class="btn-dark m-lg-3" aria-current="page" href="#">Home</a>
-                <a class="btn-dark m-lg-3" href="#">Features</a>
-                <a class="btn-dark m-lg-3" href="#">Contact</a>
-            </div>
+            <h3 class="float-md-start mb-0" ><a href="" class="navbar-brand text-white-50">Погода</a></h3>
         </div>
     </header>
 
